continue new proj

--- a/src/main/resources/templates/aboutus.html
+++ b/src/main/resources/templates/aboutus.html
@@ -15,49 +15,46 @@
 
 <body class="about-bg"><div layout:fragment="content" th:remove="tag">
   <h1 class="about-header">About Us</h1>
-  <p class="about-body"><a href="/bwaboutus">Non-grayscale About US</a></p>
-  <ul style="text-align: center">
+  <p class="about-body"><a href="key?keyword=technology">Click for API</a></p>
 
-    <a href="key?keyword=technology" class="button button5">Click for API</a>
-  </ul>
   <p class="about-body">Collaborators On This Project</p>
 
   <div class="row justify-content-center">
     <div class="column">
-      <img src="/src/main/static/images/don't panic chicken.jpg" th:src="@{/images/don't panic chicken.jpg}" width="50" height="50" class="face" alt="shekar">
-      <p class="face-name">Justin Li</p>
-      <p class="face-text">Deployment Officer</p>
+      <img src="/src/main/static/images/don't panic chicken.jpg" th:src="@{/images/}" width="50" height="50" class="face" alt="Sam">
+      <p class="face-name">Sam Mahjouri</p>
+      <p class="face-text">Scrum Master Officer</p>
       <dl>
         <a href="/justin">Individual About Us Page</a>
       </dl>
-      <center><a href="https://github.com/shekark642" style="text-decoration: none; color:black;"><i class="git fab fa-github fa-2x"></i></a></center>
+      <center><a href="https://github.com/iBraskyy" style="text-decoration: none; color:black;"><i class="git fab fa-github fa-2x"></i></a></center>
     </div>
     <div class="column">
-      <img src="/src/main/static/images/ncs_logo.jpg" th:src="@{/images/ncs_logo.jpg}" width="50" height="50" class="face" alt="chris">
+      <img src="/src/main/static/images/ncs_logo.jpg" th:src="@{/images/ncs_logo.jpg}" width="50" height="50" class="face" alt="Shekar">
       <p class="face-name">Shekar Krishnamoorthy</p>
       <p class="face-text">Github Manager</p>
       <dl>
         <a href="/shekar">Individual About Us Page</a>
       </dl>
-      <center><a href="https://github.com/jli615" style="text-decoration: none; color:black;"><i class="git fab fa-github fa-2x"></i></a></center>
+      <center><a href="https://github.com/shekark642" style="text-decoration: none; color:black;"><i class="git fab fa-github fa-2x"></i></a></center>
     </div>
     <div class="column">
-      <img src="/src/main/static/images/chickenbg.jpg" th:src="@{/images/chickenbg.jpg}" width="50" height="50" class="face" alt="sam">
-      <p class="face-name">Rohan Koshy</p>
-      <p class="face-text">Technical Officer</p>
+      <img src="/src/main/static/images/chickenbg.jpg" th:src="@{/images/}" width="50" height="50" class="face" alt="Luca">
+      <p class="face-name">Luca Pinto</p>
+      <p class="face-text">Github officer</p>
       <dl>
         <a href="/rohan">Individual About Us Page</a>
       </dl>
-      <center><a href="https://github.com/RohanKoshy" style="text-decoration: none; color:black;"><i class="git fab fa-github fa-2x"></i></a></center>
+      <center><a href="https://github.com/lucap2527" style="text-decoration: none; color:black;"><i class="git fab fa-github fa-2x"></i></a></center>
     </div>
     <div class="column">
-      <img src="/src/main/static/images/bulb_on.jpg" th:src="@{/images/bulb_on.jpg}" width="50" height="50" class="face" alt="dylan">
-      <p class="face-name">Kian Kishimoto</p>
-      <p class="face-text">Web designer</p>
+      <img src="/src/main/static/images/bulb_on.jpg" th:src="@{/images/}" width="50" height="50" class="face" alt="Paul">
+      <p class="face-name">Paul Bokelman</p>
+      <p class="face-text">Technical developer</p>
       <dl>
         <a href="/kiantransition">Individual About Us Page</a>
       </dl>
-      <center><a href="https://github.com/Uhpachee" style="text-decoration: none; color:black;"><i class="git fab fa-github fa-2x"></i></a></center>
+      <center><a href="https://github.com/" style="text-decoration: none; color:black;"><i class="git fab fa-github fa-2x"></i></a></center>
     </div>
     <div class="column">
       <img src="/src/main/static/images/bulb_off.jpg" th:src="@{/images/bulb_off.jpg}" width="50" height="50" class="face" alt="dylan">
