--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,12 +14,11 @@
 <div id="spring_intro" class="articles" style="margin: 30px;">
     <div layout:fragment="content" th:remove="tag">
 
-
         <div class="b1-bg"></div>
         <div id="block1" class="block1">
             <div class="welcome">
                 <p class="welcome-text">Welcome to</p>
-                <p class="welcome-subtext">P2 SlackBots</p>
+                <p class="welcome-subtext">The P2 Roopies</p>
                 <div class="b1-arrow bounce">
                     <a class="fa fa-arrow-down fa-2x" href="#block2" style="text-decoration: none;"></a>
                 </div>
@@ -32,16 +31,16 @@
             <div class="b2-content">
                 <center><div class="b2-box">
                     <div class="b2-left">
-                        <h3 class="h3-scale"><strong>What is this?</strong></h3>
-                            <p>- Our Project is meant to host games and databases
-                            <br>- We will give
-                            <br>- Gamers what they want!</p>
+                        <h3 class="h3-scale"><strong>Why this website?</strong></h3>
+                            <p>- Our Project is meant to host NFT'S
+                            <br>- Users can buy and store their NFT'S
+                            <br>- Directly from this website!</p>
                     </div>
                     <div class="b2-right">
                         <h3 class="h3-scale"><strong>Why do we need this?</strong></h3>
-                            <p>- Everyone wants to game
-                            <br>- Sometimes, gaming can be too confusing and too much to handle
-                            <br>- We can help with that!</p>
+                            <p>- Blockchain currency is the new thing
+                            <br>- It is growing at a very fast rate
+                            <br>- People need to be educated and aware of these things
                     </div>
                 </div></center>
             </div>
@@ -55,7 +54,7 @@
         <div id="block3" class="block3">
             <div style="padding-top: 250px">
                 <div class="b3-checker">
-                    <label class="input-label" for="news-input">Input Sample game</label><br>
+                    <label class="input-label" for="news-input">Any questions?</label><br>
                     <div style="display: flex;">
                         <input type="text" class="input-box" id="news-input" name="news-input">
                         <input type="submit" class="submit">
