--- a/src/main/resources/templates/kian.html
+++ b/src/main/resources/templates/kian.html
@@ -38,6 +38,7 @@
             <td>Name</td>
             <td>Are you alive?</td>
             <td>Are you dead?</td>
+            <help me it burns it BURNRNNNNSSSS/>
         </tr>
     </table>
 
