--- a/src/main/resources/templates/shekar.html
+++ b/src/main/resources/templates/shekar.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <!-- Signals to the Layout Dialect which layout should be used to decorate this View -->
-<html xmlns:layout="http://www.w3.org/1999/xhtml" xmlns:th="http://www.w3.org/1999/xhtml" lang="en">
+<html xmlns:layout="http://www.w3.org/1999/xhtml" xmlns:th="http://www.w3.org/1999/xhtml"
 
 <head style="text-align: center; color: #9daf9b">
     <div th:replace="fragments/head1 :: header"></div>
@@ -31,11 +31,10 @@
 <h1 style="text-align: center; margin-top: 1%; text-color: white; color: white"><strong id=>Shekar About Us Page</strong></h1>
 
 
-
 <h1 style="color: green; text-color: green; font-size:30px">My name is Shekar and this is my about us page</h1>
 <h1 style="color: green; text-color: green; font-size:30px">I am a collaborator on this project as well</h1>
-<img src="/src/main/static/images/shekar.PNG" th:src="@{/images/shekar.PNG}" width="150px" height="200px" class="face" alt="shekar" style="height:200px; width:150px">
-
+<img src="/src/main/static/images/ncs_logo.jpg" th:src="@{/images/ncs_logo.jpg}" width="150px" height="200px" class="face" alt="shekar" style="height:200px; width:150px">
+<input type="button" onclick="switchpicture()" value="Change Image"><br>
 
 <center>
     <div class="container-fluid">
@@ -99,4 +98,18 @@
 </style>
 
 </body>
+
+<script>
+    function switchpicture() {
+        var Image_Id = document.getElementById('getImage');
+        if (Image_Id.src.match("/images/ncs_logo.jpg")) {
+            Image_Id.src = "/images/logo.png";
+        }
+        else {
+            Image_Id.src = "/images/ncs_logo.jpg";
+        }
+
+    }
+</script>
+
 </html>
