--- a/src/main/resources/templates/Minilab/ratingsource.html
+++ b/src/main/resources/templates/Minilab/ratingsource.html
@@ -10,7 +10,7 @@
 
     <div class="contact" style="height: 35vh;">
         <div class="col-md-6">
-            <h3 style = "padding-top: 30px">Enter a Score (Washington Post)</h3>
+            <h3 style = "padding-top: 30px">Create a password for your NFT! (Numerical)</h3>
             <p> Type in a score for this news source to rate it</p>
             <form id="Form" action="" method="GET">
                 <input name="num1" placeholder="number from 1-100" id="num1" type="text">
@@ -21,7 +21,7 @@
 
     <div class="contact" style="height: 35vh;">
         <div class="col-md-6">
-            <h3 style = "padding-top: 30px">Enter a Score (Fox News)</h3>
+            <h3 style = "padding-top: 30px">Create a password for your NFT! (Alphanumerical)</h3>
             <p> Type in a score for this news source to rate it</p>
             <form id="Form" action="" method="GET">
                 <input name="num2" placeholder="number from 1-100" id="num2" type="text">
