--- a/src/main/resources/templates/Minilab/ratingsource.html
+++ b/src/main/resources/templates/Minilab/ratingsource.html
@@ -13,7 +13,7 @@
             <h3 style = "padding-top: 30px">Create a password for your NFT! (Numerical)</h3>
             <p> Type in a score for this news source to rate it</p>
             <form id="Form" action="" method="GET">
-                <input name="num1" placeholder="number from 1-100" id="num1" type="text">
+                <input name="num1" placeholder="Enter the number of characters the password should be" id="num1" type="text">
                 <button>Go</button>
             </form>
         </div>
@@ -24,37 +24,31 @@
             <h3 style = "padding-top: 30px">Create a password for your NFT! (Alphanumerical)</h3>
             <p> Type in a score for this news source to rate it</p>
             <form id="Form" action="" method="GET">
-                <input name="num2" placeholder="number from 1-100" id="num2" type="text">
+                <input name="num2" placeholder="Enter the number of characters the password should be" id="num2" type="text">
                 <button>Go</button>
             </form>
         </div>
     </div>
 
     <center><div class="ns-card">
-        <h1 style="padding-bottom: 20px;">News Source Bias</h1>
+        <h1 style="padding-bottom: 20px;"></h1>
         <table style="width:100%; font-size: 30px;">
             <tr>
-                <th>News Source</th>
-                <th>Political Bias</th>
-                <th>Example</th>
-                <th>Rating</th>
-                <th>Number of Reviews</th>
+                <th>Password</th>
+                <th>Given Password</th>
+                <th>Number of digits</th>
 
             </tr>
             <tr>
                 <td>Washington Post</td>
-                <td>Slight Left</td>
-                <td><a href="https://www.cnn.com/2021/09/12/asia/north-korea-missile-launch-new-intl/index.html">Article</a></td>
                 <td><p th:text="${sum}" style="font-size: 30px"></p> </td>
                 <td>1</td>
 
             </tr>
             <tr>
                 <td>Fox News</td>
-                <td>Far Right</td>
-                <td><a href="https://www.cnn.com/2021/09/12/asia/north-korea-missile-launch-new-intl/index.html">Article</a></td>
                 <td><p th:text="${sum2}" style="font-size: 30px"></p> </td>
-                <td>5</td>
+                <td>0</td>
 
             </tr>
 
