--- a/src/main/resources/templates/Minilab/ratingsource.html
+++ b/src/main/resources/templates/Minilab/ratingsource.html
@@ -11,9 +11,9 @@
     <div class="contact" style="height: 35vh;">
         <div class="col-md-6">
             <h3 style = "padding-top: 30px">Create a password for your NFT! (Numerical)</h3>
-            <p> Type in a score for this news source to rate it</p>
+            <p> Enter the number of characters the password should be</p>
             <form id="Form" action="" method="GET">
-                <input name="num1" placeholder="Enter the number of characters the password should be" id="num1" type="text">
+                <input name="num1" placeholder="number" id="num1" type="text">
                 <button>Go</button>
             </form>
         </div>
@@ -22,9 +22,9 @@
     <div class="contact" style="height: 35vh;">
         <div class="col-md-6">
             <h3 style = "padding-top: 30px">Create a password for your NFT! (Alphanumerical)</h3>
-            <p> Type in a score for this news source to rate it</p>
+            <p> Enter the number of characters the password should be</p>
             <form id="Form" action="" method="GET">
-                <input name="num2" placeholder="Enter the number of characters the password should be" id="num2" type="text">
+                <input name="num2" placeholder="number" id="num2" type="text">
                 <button>Go</button>
             </form>
         </div>
@@ -42,14 +42,13 @@
             <tr>
                 <td>Alphanumerical</td>
                 <td><p th:text="${sum}" style="font-size: 30px"></p> </td>
-                <td>1</td>
+                <td><p th:text="${num1}" style="font-size: 30px"></p> </td>
 
             </tr>
             <tr>
                 <td>Numerical</td>
                 <td><p th:text="${sum2}" style="font-size: 30px"></p> </td>
-                <td>0</td>
-
+                <td><p th:text="${num2}" style="font-size: 30px"></p> </td>
             </tr>
 
         </table>
