Fixed shakers ROOKIE mistake

--- a/src/main/resources/templates/Minilab/ratingsource.html
+++ b/src/main/resources/templates/Minilab/ratingsource.html
@@ -8,51 +8,20 @@
 
 <body style="background-color: #6084a3;"><div layout:fragment="content" th:remove="tag">
 
-    <div class="contact" style="height: 35vh;">
-        <div class="col-md-6">
-            <h3 style = "padding-top: 30px">Create a password for your NFT! (Numerical)</h3>
-            <p> Enter the number of characters the password should be</p>
-            <form id="Form" action="" method="GET">
-                <input name="num1" placeholder="number" id="num1" type="text">
-                <button>Go</button>
-            </form>
-        </div>
+    <table>
+        <tr>
+            <th>NFT Name</th>
+            <th>Description</th>
+            <th>Rating</th>
+        </tr>
+        <tr th:each="review: ${reviews}">
+            <td th:text="${review.name}"></td>
+            <td th:text="${review.description}"></td>
+            <td th:text="${review.rating}"></td>
+        </tr>
+    </table>
+
     </div>
-
-    <div class="contact" style="height: 35vh;">
-        <div class="col-md-6">
-            <h3 style = "padding-top: 30px">Create a password for your NFT! (Alphanumerical)</h3>
-            <p> Enter the number of characters the password should be</p>
-            <form id="Form" action="" method="GET">
-                <input name="num2" placeholder="number" id="num2" type="text">
-                <button>Go</button>
-            </form>
-        </div>
-    </div>
-
-    <center><div class="ns-card">
-        <h1 style="padding-bottom: 20px;"></h1>
-        <table style="width:100%; font-size: 30px;">
-            <tr>
-                <th>Password</th>
-                <th>Given Password</th>
-                <th>Number of digits</th>
-
-            </tr>
-            <tr>
-                <td>Alphanumerical</td>
-                <td><p th:text="${sum}" style="font-size: 30px"></p> </td>
-                <td><p th:text="${num1}" style="font-size: 30px"></p> </td>
-
-            </tr>
-            <tr>
-                <td>Numerical</td>
-                <td><p th:text="${sum2}" style="font-size: 30px"></p> </td>
-                <td><p th:text="${num2}" style="font-size: 30px"></p> </td>
-            </tr>
-
-        </table>
-    </div></center>
 
     <!-- End of body content specific to page -->
 </div></body>
