Added redirect page

--- a/src/main/resources/templates/Minilab/return_nft_home.html
+++ b/src/main/resources/templates/Minilab/return_nft_home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-  <a href='https://ide.geeksforgeeks.org/'>
+  <a href='http://localhost:8080/backend'>
     <button class="GFG">
       Click Here to See Results!
     </button>
