--- a/src/main/resources/templates/fragments/nav1.html
+++ b/src/main/resources/templates/fragments/nav1.html
@@ -25,10 +25,13 @@
             </li>
             <li style="cursor: default">|</li>
             <li class="nav-item active">
-                <a class="nav-link navtext" href="/greet">Database <span class="sr-only">(current)</span></a>
+                <a class="nav-link navtext" href="/greet">Greeting Database <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
                 <a class="nav-link navtext" href="/rohan">Alien NFT Creator<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link navtext" href="/gcf">Create a password<span class="sr-only">(current)</span></a>
             </li>
             <li style="cursor: default">|</li>
 
