words changed + photos added

--- a/src/main/resources/templates/kian.html
+++ b/src/main/resources/templates/kian.html
@@ -4,64 +4,64 @@
 <head><div layout:fragment="metadata" th:remove="tag">
     <meta charset="UTF-8">
     <link th:href="@{/styles/lists.css}" rel="stylesheet" />
-    <title>Games</title>
+    <title>NFT</title>
 </div>
 </head>
 
 <body><div layout:fragment="content" th:remove="tag">
     <!-- Our Top 10 Games -->
     <div class="wrapper">
-        <h2 id="movies"><strong>Our Top 10 Games!</strong></h2>
+        <h2 id="movies"><strong>New NFTs</strong></h2>
         <div class="cards">
 
             <figure class="card">
                 <img th:src="@{/images/RDD2.jpg}" class="card-img"/>
-                <figcaption>Red Dead Redemption 2</figcaption>
+                <figcaption>Joker Monkey</figcaption>
             </figure>
 
             <figure class="card">
                 <img th:src="@{/images/Doom.jpg}" class="card-img"/>
-                <figcaption>Doom Eternal</figcaption>
+                <figcaption>Batman Monkey</figcaption>
             </figure>
 
             <figure class="card">
                 <img th:src="@{/images/COD-ColdWar.jpg}" class="card-img"/>
-                <figcaption>Call of Duty Black Ops: Cold War</figcaption>
+                <figcaption>King Monkey</figcaption>
             </figure>
 
             <figure class="card">
                 <img th:src="@{/images/AC-Valhalla.jpeg}" class="card-img"/>
-                <figcaption>Assassins Creed: Valhalla</figcaption>
+                <figcaption>Queen Monkey</figcaption>
             </figure>
 
             <figure class="card">
                 <img th:src="@{/images/Battlefront2.jpg}" class="card-img"/>
-                <figcaption>Battlefront 2</figcaption>
+                <figcaption>Knight Monkey</figcaption>
             </figure>
 
             <figure class="card">
                 <img th:src="@{/images/MortalKombat11.jpg}" class="card-img"/>
-                <figcaption>Mortal Kombat 11</figcaption>
+                <figcaption>Assassin Monkey</figcaption>
             </figure>
 
             <figure class="card">
                 <img th:src="@{/images/Breath.jpg}" class="card-img"/>
-                <figcaption>The Legend of Zelda: Breath of the Wild</figcaption>
+                <figcaption>Smoker Monkey</figcaption>
             </figure>
 
             <figure class="card">
                 <img th:src="@{/images/Smash.jpg}" class="card-img"/>
-                <figcaption>Super Smash Bros: Ultimate</figcaption>
+                <figcaption>Impostor Monkey</figcaption>
             </figure>
 
             <figure class="card">
                 <img th:src="@{/images/Mario.jpg}" class="card-img"/>
-                <figcaption>Super Mario Odyssey</figcaption>
+                <figcaption>Mario Monkey</figcaption>
             </figure>
 
             <figure class="card">
                 <img th:src="@{/images/jumanji.jpg}" class="card-img"/>
-                <figcaption>Jumanji: The Video Game</figcaption>
+                <figcaption>Traveler Monkey</figcaption>
             </figure>
 
         </div>
@@ -69,57 +69,57 @@
 
         <!-- Top 10 Worst Games Ever Created -->
         <div class="wrapper">
-            <h2 id="games"><strong>The Top 10 Worst Games Ever Created</strong></h2>
+            <h2 id="games"><strong>Top 10 NFTs</strong></h2>
             <div class="cards">
 
                 <figure class="card">
                     <img th:src="@{/images/amongus.jpg}" class="card-img"/>
-                    <figcaption>Among Us</figcaption>
+                    <figcaption>Sussy Monkey</figcaption>
                 </figure>
 
                 <figure class="card">
                     <img th:src="@{/images/fallguys.jpg}" class="card-img"/>
-                    <figcaption>Fall Guys</figcaption>
+                    <figcaption>Minion Monkey</figcaption>
                 </figure>
 
                 <figure class="card">
                     <img th:src="@{/images/ghostbusters.jpg}" class="card-img"/>
-                    <figcaption>Ghostbusters: The Video Game</figcaption>
+                    <figcaption>CEO Monkey</figcaption>
                 </figure>
 
                 <figure class="card">
                     <img th:src="@{/images/crash.jpg}" class="card-img"/>
-                    <figcaption>Crash Bandicoot</figcaption>
+                    <figcaption>Halo Monkey</figcaption>
                 </figure>
 
                 <figure class="card">
                     <img th:src="@{/images/haloe.jpg}" class="card-img"/>
-                    <figcaption>Halo: Evolved</figcaption>
+                    <figcaption>Angel Monkey</figcaption>
                 </figure>
 
                 <figure class="card">
                     <img th:src="@{/images/minecraft.jpg}" class="card-img"/>
-                    <figcaption>Minecraft</figcaption>
+                    <figcaption>Minecraft Monkey</figcaption>
                 </figure>
 
                 <figure class="card">
                     <img th:src="@{/images/ninjago.jpg}" class="card-img"/>
-                    <figcaption>The Ninjago Movie: Video Game</figcaption>
+                    <figcaption>Ninja Monkey</figcaption>
                 </figure>
 
                 <figure class="card">
                     <img th:src="@{/images/dungeons.jpg}" class="card-img"/>
-                    <figcaption>Minecraft: Dungeons</figcaption>
+                    <figcaption>Soldier Monkey</figcaption>
                 </figure>
 
                 <figure class="card">
                     <img th:src="@{/images/smb3.jpg}" class="card-img"/>
-                    <figcaption>Super Mario Bros 3</figcaption>
+                    <figcaption>Zombie Monkey</figcaption>
                 </figure>
 
                 <figure class="card">
                     <img th:src="@{/images/valorant.jpg}" class="card-img"/>
-                    <figcaption>Valorant</figcaption>
+                    <figcaption>President Monkey</figcaption>
                 </figure>
 
             </div>
